# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 Fundament Software SPC <https://fundament.software>

[package]
name = "list-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Testbed for margins in Lists and Flexboxes
"""
homepage.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "list-rs"
path = "main.rs"

[dependencies]
wgpu.workspace = true
winit.workspace = true
tokio.workspace = true
feather-ui.workspace = true
ultraviolet.workspace = true
im.workspace = true
cosmic-text.workspace = true
feather-macro.workspace = true
