[package]
name = "timer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Basic feather timer example
"""
homepage.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "basic"
path = "main.rs"

[dependencies]
wgpu.workspace = true
winit.workspace = true
eyre.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
feather-ui.workspace = true
im.workspace = true

[build-dependencies]
alicorn.workspace = true
