# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 Fundament Software SPC <https://fundament.software>

[package]
name = "basic-alc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Basic feather window using Alicorn
"""
homepage.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "basic-alc"
path = "basic.rs"

[dependencies]
feather-ui.workspace = true
alicorn.workspace = true
